prd_appcolor/pink/appcolor-prd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appcolor
    versao: {VERSAO}
    app.kubernetes.io/part-of: appcolor-prd-{VERSAO}
  name: appcolor-prd-deploy-{VERSAO}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appcolor
      versao: {VERSAO}
  template:
    metadata:
      labels:
        app: appcolor
        versao: {VERSAO}
    spec:
      containers:
        - image: default-route-openshift-image-registry.apps.ocplab.vtal.intra/appcolor/appcolor:{VERSAO}
          name: appcolor
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
