prd_appcolor/pink/appcolor-prd-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appcolor
    versao: {VERSAO}
  name: appcolor-prd-route-{VERSAO}
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appcolor-prd-svc-{VERSAO_ALT}
    weight: 100
  port:
    targetPort: appcolor-prd-svc-port-{VERSAO_ALT}
  wildcardPolicy: None
